BZ1015541 Add -XX:MaxPermSize=256M